# gemini-cli-python

./: .gitignore  README.md  pyproject.toml
docs/: CODE_READING_GUIDE.md  EQUIVALENCE_MATRIX.md  PORTING_PLAN.md  SUBAGENT_TECHNICAL_ARCHITECTURE.md  TOOL_REFERENCE.md
docs/tracing/: GPT4_TRACING_QUERIES.md  TRACING_AUDIT.md
src/py_agent_runtime/: __init__.py
src/py_agent_runtime/agents/: __init__.py  agent_scheduler.py  completion_schema.py  llm_runner.py  local_executor.py  registry.py  subagent_tool.py  types.py
src/py_agent_runtime/bus/: __init__.py  message_bus.py  types.py
src/py_agent_runtime/cli/: __init__.py  main.py
src/py_agent_runtime/llm/: __init__.py  anthropic_provider.py  base_provider.py  factory.py  gemini_provider.py  huggingface_provider.py  normalizer.py  openai_provider.py  retry.py  types.py
src/py_agent_runtime/plans/: __init__.py  validation.py
src/py_agent_runtime/policy/: __init__.py  defaults_loader.py  engine.py  loader.py  (+1 more)
tests/: test_agent_registry.py  test_anthropic_provider.py  test_cli_main.py  test_completion_schema.py  test_fs_tools.py  test_gemini_provider.py  test_golden_scenarios.py  test_huggingface_provider.py  test_llm_factory.py  test_llm_normalizer.py  test_llm_retry.py  test_llm_runner.py  test_local_executor.py  test_message_bus.py  test_openai_provider.py  test_plan_tools.py  test_plan_validation.py  test_policy_defaults.py  test_policy_engine.py  test_policy_loader.py  test_run_shell_command_tool.py  test_runtime_config.py  test_scheduler.py  test_subagent_tool.py  test_todo_tools.py  test_tool_schemas.py
(+27 files in other folders)
