[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "py-agent-runtime"
version = "0.1.0"
description = "Python reimplementation of gemini-cli orchestration runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0",
]

[project.scripts]
py-agent-runtime = "py_agent_runtime.cli.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["py_agent_runtime"]

[[tool.mypy.overrides]]
module = ["openai", "openai.*", "anthropic", "anthropic.*"]
ignore_missing_imports = true
